feat: done destroy users
