# routes/api.php
@@ -16,6 +16,8 @@ use Illuminate\Support\Facades\Route;
 
 Route::group(['prefix' => 'v1'], function () {
     Route::get('/users', [\App\Http\Controllers\UserController::class, 'index']);
+    Route::get('/{id_user}/user', [\App\Http\Controllers\UserController::class, 'show']);
     Route::post('/user', [\App\Http\Controllers\UserController::class, 'store']);
     Route::patch('/{id_user}/user', [\App\Http\Controllers\UserController::class, 'update']);
+    Route::delete('/{id_user}/user', [\App\Http\Controllers\UserController::class, 'destroy']);
 });
