# storage/api-docs/api-docs.json
@@ -12,7 +12,7 @@
                 ],
                 "summary": "Get Simple Pagination Laravel of data Users",
                 "description": "Returns list of simple pagination Laravel Users",
-                "operationId": "getUsersList",
+                "operationId": "getUsers",
                 "parameters": [
                     {
                         "name": "page",
@@ -97,6 +97,80 @@
             }
         },
         "/api/v1/{id_user}/user": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get user with partial user data",
+                "description": "Get with partial user data",
+                "operationId": "getUser",
+                "parameters": [
+                    {
+                        "name": "id_user",
+                        "in": "path",
+                        "description": "Target user id",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "nullable": "true",
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/components/schemas/UserResource"
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Delete user",
+                "description": "Permanently delete user",
+                "operationId": "deleteUser",
+                "parameters": [
+                    {
+                        "name": "id_user",
+                        "in": "path",
+                        "description": "Target user id",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "boolean",
+                                            "example": true,
+                                            "nullable": "true"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "patch": {
                 "tags": [
                     "Users"
